changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget10/base-tables-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget10/base-tables-widget10.component.html
@@ -60,12 +60,12 @@
     <div class="col-md-4"></div>
     <div class="col-lg-1">
       <span style="font-size: 35px; cursor: pointer;" (click)="excelDownload()" ngbTooltip="CSV Download"
-        placement="bottom"><i class="fas fa-file-csv"></i></span>
+        placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
 
     </div>
     <div class="col-lg-1">
       <span style="font-size: 35px; cursor: pointer;" (click)="exportToPDF()" ngbTooltip="PDF Download"
-        placement="bottom"><i class="fas fa-file-pdf"></i></span>
+        placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
 
     </div>
     <div class="col-lg-1">
