--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget4/base-tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget4/base-tables-widget4.component.html
@@ -27,11 +27,11 @@
     <div class="col-md-1"></div>
     <div class="col-auto">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-        (click)="exportToPDF()"><i class="fas fa-file-pdf"></i></span>
+        (click)="exportToPDF()"><i class="fas fa-file-pdf" style="font-size: 35px;"></i></span>
     </div>
     <div class="col-auto">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download Excel" placement="bottom"
-        (click)="exportexcel()"><i class="fas fa-file-csv"></i></span>
+        (click)="exportexcel()"><i class="fas fa-file-csv" style="font-size: 35px;"></i></span>
     </div>
   </div>
 </form>
