--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
@@ -45,7 +45,7 @@
 
                 <div class="col-lg-1">
                   <span style="font-size: 35px;cursor: pointer;" (click)="downloadFuelPrice()" ngbTooltip="Download CSV"
-                    placement="bottom"><i class="fas fa-file-csv"></i></span><br>
+                    placement="bottom"><i class="fas fa-file-csv" style="font-size: 35px;"></i></span><br>
                 </div>
 
               </div>
