--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget13/charts-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget13/charts-widget13.component.html
@@ -36,10 +36,10 @@
 
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <span style="font-size: 30px;cursor: pointer;" (click)="exportToPDF()" ngbTooltip="Download PDF"
-        placement="bottom"><i class="fas fa-file-pdf"></i></span>
+        placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <span style="font-size: 30px;cursor: pointer;" (click)="excelDownload()" ngbTooltip="Download CSV"
-        placement="bottom"><i class="fas fa-file-csv"></i></span>
+        placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
 
     </div>
 
