--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget14/charts-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget14/charts-widget14.component.html
@@ -29,11 +29,11 @@
     <div class="col-auto">
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <span style="font-size: 30px;cursor: pointer;" ngbTooltip="Download CSV" (click)="excelDownloadLube()"><i
-          class="fas fa-file-csv"></i></span>
+          class="fas fa-file-csv" style="font-size: 30px;"></i></span>
 
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <span style="font-size: 30px;cursor: pointer;" ngbTooltip="Download PDF" (click)="exportToPDFLube()"><i
-          class="fas fa-file-pdf"></i></span>
+          class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
     </div>
 
 
