--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
@@ -145,7 +145,7 @@
             </button>
         </div> -->
       <div class="col-auto">
-        <button type="button" class="btn btn-primary" routerLink="/credit/crPurchaseBook">
+        <button type="button" class="btn btn-primary" routerLink="/ledger/creditSales">
           Back </button>
       </div>
     </div>
@@ -280,7 +280,7 @@
             </button>
         </div> -->
       <div class="col-auto">
-        <button type="button" class="btn btn-primary" routerLink="/credit/crPurchaseBook">
+        <button type="button" class="btn btn-primary" routerLink="/ledger/creditSales">
           Back </button>
       </div>
     </div>
