--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget12/lists-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget12/lists-widget12.component.html
@@ -101,12 +101,12 @@
         
             <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" (click)="exportToPDF31()"><i
-                        class="fas fa-file-pdf"></i></span> <br>
+                        class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
             </div>
         
             <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" (click)="excelDownload31()"><i
-                        class="fas fa-file-csv"></i></span> <br>
+                        class="fas fa-file-csv" style="font-size: 30px;"></i></span> <br>
             </div>
         
         </div>
@@ -1963,10 +1963,10 @@
 
         
         <div class="col-md-1">
-            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" (click)="exportToPDF1()"  ><i class="fas fa-file-pdf"></i></span> <br>
+            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" (click)="exportToPDF1()"  ><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
         </div>            
         <div class="col-md-1">
-            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV"  (click)="exportexcel1()"><i class="fas fa-file-csv"></i></span> <br>
+            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV"  (click)="exportexcel1()"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span> <br>
         </div>            
 
 
