--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
@@ -160,9 +160,9 @@
                   </div>
 
                   <div class="row" style="text-align: center;align-items: center;">
-                    <!-- <div class="col-md-3" style="text-align: left;">
+                    <div class="col-md-3" style="text-align: left;">
                             <b> Mobile:</b> {{dealerMobile}}
-                        </div> -->
+                        </div>
                     <div class="col-md-12" style="text-align: center;">
                       <b style="font-size: 12px;"> {{brandName}} petrol pump</b>
                     </div>
