--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget15/mixed-widget15.component.html
@@ -58,12 +58,12 @@
 
     <div class="col-md-1">
       <span style="font-size: 35px;cursor: pointer;" (click)="exportToPDF()" ngbTooltip="Download PDF"
-        placement="bottom"><i class="fas fa-file-pdf"></i></span><br>
+        placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
     </div>
 
     <div class="col-md-1">
       <span style="font-size: 35px;cursor: pointer;" (click)="exportExcel()" ngbTooltip="Download CSV"
-        placement="bottom"><i class="fas fa-file-csv"></i></span><br>
+        placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span><br>
     </div>
 
 
