--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
@@ -65,7 +65,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="meterSalesDetails.length">
+                            <table *ngIf="meterSalesDetails">
                                 <tr>
                                     <th colspan="12">
                                         Product-wise Summary
@@ -174,7 +174,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="productWiseCreditData.length">
+                            <table *ngIf="productWiseCreditData">
                                 <tr>
                                     <td colspan="12">
                                         Product-wise Credit Summary
@@ -363,7 +363,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="shiftWiseData.length">
+                            <table *ngIf="shiftWiseData">
                                 <tr>
                                     <td colspan="6">
                                         <table class="table main-table">
@@ -403,7 +403,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="shiftWiseData.length">
+                            <table *ngIf="shiftWiseData">
                                 <tr>
                                     <td colspan="12">
                                         <table class="table main-table">
@@ -447,7 +447,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="shiftWiseData.length">
+                            <table *ngIf="shiftWiseData">
                                 <tr>
                                     <td colspan="12">
                                         <table class="table main-table">
@@ -491,7 +491,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="shiftNzDetails.length" style="font-size: x-small;">
+                            <table *ngIf="shiftNzDetails" style="font-size: x-small;">
                                 <tr>
                                     <th colspan="12">
                                         All-in-One Shift Sales Summary
@@ -566,7 +566,7 @@
                             </table>
                             <br>
                             <br>
-                            <table *ngIf="totalLubeCash.length" class="table  table-centered table-nowrap"
+                            <table *ngIf="totalLubeCash" class="table  table-centered table-nowrap"
                                 style="width: 90%;">
                                 <tr>
                                     <th colspan="12">
@@ -626,7 +626,7 @@
                                 </tr>
                             </table>
 
-                            <!-- <table *ngIf="totalLubeCredit.length" class="table  table-centered table-nowrap" >
+                            <!-- <table *ngIf="totalLubeCredit" class="table  table-centered table-nowrap" >
                         <thead class="table-light">
                             <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -647,7 +647,7 @@
                         </tbody>
                     </table> -->
 
-                            <table *ngIf="digitalDetails.length">
+                            <table *ngIf="digitalDetails">
                                 <tr>
                                     <th colspan="12">
                                         Digital Summary
@@ -692,7 +692,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="digitalLubeData.length">
+                            <table *ngIf="digitalLubeData">
                                 <tr>
                                     <td colspan="12">
                                         <!-- <app-page-title title="Digital(Lube) Summary"></app-page-title> -->
@@ -812,7 +812,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="creditDetails.length">
+                            <table *ngIf="creditDetails">
                                 <tr>
                                     <th colspan="12">
                                         Credit Customers Sales Summary
@@ -885,7 +885,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="creditPaymentDetails.length">
+                            <table *ngIf="creditPaymentDetails">
                                 <tr>
                                     <th colspan="12">
                                         Credit Customers Payments Summary
@@ -951,7 +951,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="lubeCrDetails.length">
+                            <table *ngIf="lubeCrDetails">
                                 <tr>
                                     <td colspan="12">
                                         <!-- <app-page-title title="Lube Customers Sales Summary"></app-page-title> -->
@@ -1020,7 +1020,7 @@
                                 </tr>
                             </table>
 
-                            <table *ngIf="advAmtDetails.length">
+                            <table *ngIf="advAmtDetails">
                                 <tr>
                                     <td colspan="12">
                                         <!-- <app-page-title title="Advance Amt Customers Summary"></app-page-title> -->
@@ -1079,7 +1079,7 @@
 
                             </table>
 
-                            <table *ngIf="lubeDetails.length">
+                            <table *ngIf="lubeDetails">
                                 <tr>
                                     <td colspan="12">
                                         <!-- <app-page-title title="Lube(Credit) Customers Sales Summary"></app-page-title> -->
@@ -1159,7 +1159,7 @@
                             </table>
                             <br>
                             <br><br>
-                            <table *ngIf="lubeDetails.length">
+                            <table *ngIf="lubeDetails">
                                 <tr>
                                     <td colspan="12">
                                         <!-- <app-page-title title="Lube(Cash) Customers Sales Summary"></app-page-title> -->
