--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
@@ -23,7 +23,7 @@
           [ngModelOptions]="{standalone: true}" ngbDatepicker #startDate="ngbDatepicker">
       </div>
       <div class="col-md-4"></div>
-      <div class="col-auto">
+      <div class="col-auto noprint">
         <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print </button>
       </div>
       <div class="col-auto">
@@ -47,7 +47,8 @@
               </thead>
               <tbody>
 
-                <table class="table">
+
+                <table class="table table-responsive">
                   <thead>
                     <tr>
                       <th colspan="3"
@@ -204,7 +205,7 @@
                     <thead>
                       <tr>
                         <th colspan="12"
-                          style="text-align: center; border: 1px solid #272829; background-color: rgb(178, 217, 233); border-top: 2px solid #272829;">
+                          style="text-align: center; border: 1px solid #272829; background-color: rgb(178, 217, 233); border-top: 2px solid #272829; border-bottom: 2px solid #272829;">
                           <h6><b>Credit Customer</b></h6>
                         </th>
                       </tr>
@@ -250,7 +251,7 @@
                       </tr>
                     </tbody>
                     <tbody>
-                      <tr>
+                      <tr style="border-bottom: 1px solid #272829;">
                         <td colspan="8" style="text-align: center; border: 1px solid #272829;"> <b>Total</b> </td>
                         <td colspan="2" style="text-align: center; border: 1px solid #272829;"> <b>{{totalCrCustQty |
                             number:'1.2-2'}}</b> </td>
