--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget11/lists-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget11/lists-widget11.component.html
@@ -110,13 +110,13 @@
           <div class="col-md-1">
               <span style="font-size: 35px;cursor: pointer;" (click)="exportPDFamount()"
                   ngbTooltip="Download PDF" placement="bottom"><i
-                      class="fas fa-file-pdf"></i></span><br>
+                      class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
           </div>
 
           <div class="col-md-1">
               <span style="font-size: 35px;cursor: pointer;" (click)="exportExcelamount()"
                   ngbTooltip="Download CSV" placement="bottom"><i
-                      class="fas fa-file-csv"></i></span><br>
+                      class="fas fa-file-csv" style="font-size: 30px;"></i></span><br>
           </div>
 
 
@@ -196,13 +196,13 @@
                   <div class="col-md-1">
                       <span style="font-size: 35px;cursor: pointer;" (click)="exportPDFQuantity()"
                           ngbTooltip="Download PDF" placement="bottom"><i
-                              class="fas fa-file-pdf"></i></span><br>
+                              class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
                   </div>
       
                   <div class="col-md-1">
                       <span style="font-size: 35px;cursor: pointer;" (click)="exportExcelQuantity()"
                           ngbTooltip="Download CSV" placement="bottom"><i
-                              class="fas fa-file-csv"></i></span><br>
+                              class="fas fa-file-csv" style="font-size: 30px;"></i></span><br>
                   </div>
               
       </div>
