--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
@@ -28,8 +28,8 @@
           <div class="col-lg-10">
             <div class="p-3">
               <h5 class="font-size-14 mb-3 mt-0">Slider with ticks and value</h5>
-              <!-- <ng5-slider [(value)]="tickValue" [options]="tickValueoptions"
-                (click)="getShiftWiseBookDetailsMonthWise(tickValue)"></ng5-slider> -->
+              <ngx-slider (click)="getShiftWiseBookDetailsMonthWise(tickValue)" [(value)]="tickValue"
+                  [options]="tickValueoptions"></ngx-slider>
             </div>
             <br>
           </div>
