--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget11/tiles-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget11/tiles-widget11.component.html
@@ -1,28 +1,179 @@
-<!--begin::Tiles Widget 11-->
-<div
-  class="card card-custom bg-"
-  [ngClass]="cssClass"
-  [ngStyle]="{ height: widgetHeight }"
->
-  <div class="card-body">
-    <span
-      [inlineSVG]="'./assets/icons/duotune/general/element-11'"
-      class="svg-icon fs-3x text-white ml-n2"
-    ></span>
-
-    <div
-      [ngClass]="textInverseCSSClass"
-      class="font-weight-bolder font-size-h2 mt-3"
-    >
-      790
+<span *ngIf="accessGroup != '19'">
+  <span *ngIf="accessGroup != '21'">
+    <div class="row mb-2">
+      <div class="col-sm-7">
+      </div>
     </div>
+    <div class="row">
+      <div class="col col-xl-12 col-lg-12">
+        <div class="table-responsive mb-0">
+          <table class="table table-centered table-nowrap" style="border: solid 1px;">
+            <thead>
+              <tr>
+                <th style="text-align: left;border: solid 1px;"> Book / Account </th>
+                <th style="text-align: left;border: solid 1px;">
+                  Opening Balance <br>
+                  ( as of {{openingDate | date:"mediumDate"}} )
+                </th>
+                <th style="text-align: left;border: solid 1px;"> Total Debit </th>
+                <th style="text-align: left;border: solid 1px;"> Total Credit </th>
+                <th style="text-align: left;border: solid 1px;">
+                  Closing Balance <br>
+                  ( as of {{closingDate | date:"mediumDate"}} )
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="text-align: left;border: solid 1px;">
+                  Oil Company
+                </td>
+                <td *ngIf="oilCoStatus" style="text-align: left;border: solid 1px;">
+                  <span *ngIf="oilCoAcTotalAmount1 < 0" style="color: red;">
+                    {{ oilCoAcTotalAmount1 | number:'1.2-2'}}
+                  </span>
+                  <span *ngIf="oilCoAcTotalAmount1 >= 0">
+                    {{ oilCoAcTotalAmount1 | number:'1.2-2'}}
+                  </span>
+                </td>
+                <td *ngIf="!oilCoStatus" style="text-align: left;">
+                  -
+                </td>
+                <td style="text-align: left;border: solid 1px;">
+                  {{totalOilCoACDebit | number:'1.2-2'}}
+                </td>
+                <td style="text-align: left;border: solid 1px;">
+                  {{totalOilCoCredit | number:'1.2-2'}}
+                </td>
+                <td *ngIf="oilCoStatus" style="text-align: left;border: solid 1px;">
+                  <span *ngIf="closingOilCoACBlc < 0" style="color: red;">
+                    {{ closingOilCoACBlc | number:'1.2-2'}}
+                  </span>
+                  <span *ngIf="closingOilCoACBlc >= 0">
+                    {{ closingOilCoACBlc | number:'1.2-2'}}
+                  </span>
+                </td>
+                <td *ngIf="!oilCoStatus" style="text-align: left;border: solid 1px;">
+                  -
+                </td>
 
-    <a
-      href="#"
-      [ngClass]="textInverseCSSClass"
-      class="font-weight-bold font-size-lg mt-1"
-      >New Products</a
-    >
-  </div>
-</div>
-<!--end::Tiles Widget 11-->
+              </tr>
+              <tr *ngFor="let data of bankWiseDetailsOPEN">
+                <td style="text-align: left;border: solid 1px;">
+                  {{data.bankName}} {{data.accountNumber}}
+                </td>
+                <td *ngIf="data.status != 'FALSE' " style="text-align: left;border: solid 1px;">
+                  <span *ngIf="data.accType == 'LOAN' ">
+                    <span
+                      *ngIf="(data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment - data.totalOpeningCrPay) < 0"
+                      style="color: red;">
+                      {{ (data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment -
+                      data.totalOpeningCrPay) | number:'1.2-2'}}
+                    </span>
+                    <span
+                      *ngIf="(data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment - data.totalOpeningCrPay) >= 0">
+                      {{ (data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment -
+                      data.totalOpeningCrPay) | number:'1.2-2'}}
+                    </span>
+                  </span>
+                  <span *ngIf="data.accType == 'SAVING' ">
+                    <span
+                      *ngIf="(data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment + data.totalOpeningCrPay) < 0"
+                      style="color: red;">
+                      {{ (data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment +
+                      data.totalOpeningCrPay) | number:'1.2-2'}}
+                    </span>
+                    <span
+                      *ngIf="(data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment + data.totalOpeningCrPay) >= 0">
+                      {{ (data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment +
+                      data.totalOpeningCrPay) | number:'1.2-2'}}
+                    </span>
+                  </span>
+                </td>
+                <td *ngIf="data.status == 'FALSE' " style="text-align: left;border: solid 1px;">
+                  -
+                </td>
+                <td style="text-align: left;border: solid 1px;">
+                  {{ data.totalDebit | number:'1.2-2'}}
+                </td>
+                <td style="text-align: left;border: solid 1px;">
+                  {{ data.totalCredit + data.totalCreditPayment + data.totalCreditPay | number:'1.2-2'}}
+                </td>
+                <td *ngIf="data.status != 'FALSE' " style="text-align: left;border: solid 1px;">
+                  <span *ngIf="data.accType == 'LOAN' ">
+                    <span
+                      *ngIf="(data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment + data.totalDebit - data.totalCredit - data.totalCreditPayment - data.totalOpeningCrPay) < 0"
+                      style="color: red;">
+                      {{ (data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment +
+                      data.totalDebit - data.totalCredit - data.totalCreditPayment - data.totalOpeningCrPay) |
+                      number:'1.2-2'}}
+                    </span>
+                    <span
+                      *ngIf="(data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment + data.totalDebit - data.totalCredit - data.totalCreditPayment - data.totalOpeningCrPay) >= 0">
+                      {{ (data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment +
+                      data.totalDebit - data.totalCredit - data.totalCreditPayment - data.totalOpeningCrPay) |
+                      number:'1.2-2'}}
+                    </span>
+                  </span>
+                  <span *ngIf="data.accType == 'SAVING' ">
+                    <span
+                      *ngIf="(data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment - data.totalDebit + data.totalCredit + data.totalCreditPayment + data.totalOpeningCrPay) < 0"
+                      style="color: red;">
+                      {{ (data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment -
+                      data.totalDebit + data.totalCredit + data.totalCreditPayment + data.totalOpeningCrPay) |
+                      number:'1.2-2'}}
+                    </span>
+                    <span
+                      *ngIf="(data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment - data.totalDebit + data.totalCredit + data.totalCreditPayment + data.totalOpeningCrPay) >= 0">
+                      {{ (data.expenseAmount - data.totalOpeningDb + data.totalOpeningCr + data.totalOpeningCrPayment -
+                      data.totalDebit + data.totalCredit + data.totalCreditPayment + data.totalOpeningCrPay) |
+                      number:'1.2-2'}}
+                    </span>
+                  </span>
+                </td>
+                <td *ngIf="data.status == 'FALSE' " style="text-align: left;border: solid 1px;">
+                  -
+                </td>
+              </tr>
+              <tr>
+                <td style="text-align: left;border: solid 1px;">
+                  Cash
+                </td>
+                <td *ngIf="cashStatus" style="text-align: left;border: solid 1px;">
+                  <span *ngIf="cashAcTotalAmount1 < 0" style="color: red;">
+                    {{ (cashAcTotalAmount1) | number:'1.2-2'}}
+                  </span>
+                  <span *ngIf="cashAcTotalAmount1 >= 0">
+                    {{ cashAcTotalAmount1 | number:'1.2-2'}}
+                  </span>
+                </td>
+                <td *ngIf="!cashStatus" style="text-align: left;border: solid 1px;">
+                  -
+                </td>
+                <td style="text-align: left;border: solid 1px;">
+                  {{totalCashACDebit | number:'1.2-2'}}
+                </td>
+                <td style="text-align: left;border: solid 1px;">
+                  {{totalCashACCredit | number:'1.2-2'}}
+                </td>
+                <td *ngIf="cashStatus" style="text-align: left;border: solid 1px;">
+                  <span *ngIf="closingCashACBlc < 0" style="color: red;">
+                    {{ closingCashACBlc | number:'1.2-2'}}
+                  </span>
+                  <span *ngIf="closingCashACBlc >= 0">
+                    {{ closingCashACBlc | number:'1.2-2'}}
+                  </span>
+                </td>
+                <td *ngIf="!cashStatus" style="text-align: left;border: solid 1px;">
+                  -
+                </td>
+
+              </tr>
+            </tbody>
+          </table>
+
+        </div>
+      </div>
+    </div>
+  </span>
+</span>
