--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
   <!-- begin::Row -->
   <div class="row gy-5 gx-xl-8">
     <div class="col-xl-12">
-      
+      <app-tiles-widget11 class="card card-xxl-stretch mb-xl-3"></app-tiles-widget11>
     </div>
   </div>
   <!-- end::Row -->
